Bindings/C/Include/OVR_CAPI.h

typedef char ovrBool;
typedef struct ovrSizei_
{
    int w, h;
} ovrSizei;
typedef struct ovrVector2f_
{
    float x, y;
} ovrVector2f;
typedef struct ovrMatrix4f_
{
    float M[4][4];
} ovrMatrix4f;
typedef struct ovrPosef_
{
    ovrQuatf     Orientation;
    ovrVector3f  Position;    
} ovrPosef;
typedef struct ovrFovPort_
{
    float UpTan;
    float DownTan;
    float LeftTan;
    float RightTan;
} ovrFovPort;
typedef enum
{
    ovrHmd_None             = 0,    
    ovrHmd_DK1              = 3,
    ovrHmd_DKHD             = 4,
    ovrHmd_CrystalCoveProto = 5,
    ovrHmd_DK2              = 6,
    ovrHmd_Other             
} ovrHmdType;
typedef enum
{
    ovrHmdCap_Present           = 0x0001,   
    ovrHmdCap_Available         = 0x0002,   
    ovrHmdCap_Orientation       = 0x0010,   
    ovrHmdCap_YawCorrection     = 0x0020,   
    ovrHmdCap_Position          = 0x0040,   
    ovrHmdCap_LowPersistence    = 0x0080,   
    ovrHmdCap_LatencyTest       = 0x0100,   
    ovrHmdCap_DynamicPrediction = 0x0200,   
    ovrHmdCap_NoVSync           = 0x1000
} ovrHmdCapBits;
typedef enum
{        
    ovrDistortion_Chromatic = 0x01,
    ovrDistortion_TimeWarp    = 0x02,
    ovrDistortion_Vignette  = 0x08
} ovrDistortionCaps;
typedef enum
{
    ovrEye_Left  = 0,
    ovrEye_Right = 1,
    ovrEye_Count = 2
} ovrEyeType;
typedef struct ovrHmdStruct* ovrHmd;
typedef struct ovrHmdDesc_
{
    ovrHmd      Handle;  
    ovrHmdType  Type;
    const char* ProductName;    
    const char* Manufacturer;
    unsigned int Caps;
    unsigned int DistortionCaps;
    ovrSizei    Resolution;
    ovrVector2i WindowsPos;     
    ovrFovPort  DefaultEyeFov[ovrEye_Count];
    ovrFovPort  MaxEyeFov[ovrEye_Count];
    ovrEyeType  EyeRenderOrder[ovrEye_Count];
    const char* DisplayDeviceName;
    long        DisplayId;
} ovrHmdDesc;
typedef enum
{
    ovrStatus_OrientationTracked    = 0x0001,   
    ovrStatus_PositionTracked       = 0x0002,   
    ovrStatus_PositionConnected     = 0x0020,   
    ovrStatus_HmdConnected          = 0x0080    
} ovrStatusBits;
typedef struct ovrSensorState_
{
    ovrPoseStatef  Predicted;
    ovrPoseStatef  Recorded;
    float          Temperature;    
    unsigned int   StatusFlags;
} ovrSensorState;
typedef struct ovrSensorDesc_
{
    short   VendorId;
    short   ProductId;
    char    SerialNumber[24];
} ovrSensorDesc;
typedef struct ovrFrameTiming_
{
    float            DeltaSeconds;
    double            ThisFrameSeconds;
    double            TimewarpPointSeconds;
    double            NextFrameSeconds;
    double            ScanoutMidpointSeconds;
    double            EyeScanoutSeconds[2];    
} ovrFrameTiming;
typedef struct ovrEyeDesc_
{    
    ovrEyeType  Eye;
    ovrSizei    TextureSize;     
    ovrRecti    RenderViewport;  
    ovrFovPort  Fov;
} ovrEyeDesc;
typedef struct ovrEyeRenderDesc_
{    
    ovrEyeDesc  Desc;        
    ovrRecti    DistortedViewport;             
    ovrVector2f PixelsPerTanAngleAtCenter;  
    ovrVector3f ViewAdjust;                  
} ovrEyeRenderDesc;
typedef enum
{
    ovrRenderAPI_None,
    ovrRenderAPI_OpenGL,
    ovrRenderAPI_Android_GLES,  
    ovrRenderAPI_D3D9,
    ovrRenderAPI_D3D10,
    ovrRenderAPI_D3D11,
    ovrRenderAPI_Count
} ovrRenderAPIType;
typedef struct ovrRenderAPIConfig_
{
    ovrRenderAPIConfigHeader Header;
    uintptr_t                PlatformData[8];
} ovrRenderAPIConfig;
typedef struct ovrTexture_
{
    ovrTextureHeader Header;
    uintptr_t        PlatformData[8];
} ovrTexture;
OVR_EXPORT ovrBool  ovr_Initialize();
OVR_EXPORT void     ovr_Shutdown();
OVR_EXPORT int      ovrHmd_Detect();
OVR_EXPORT ovrHmd   ovrHmd_Create(int index);
OVR_EXPORT void     ovrHmd_Destroy(ovrHmd hmd);
OVR_EXPORT ovrHmd   ovrHmd_CreateDebug(ovrHmdType type);
OVR_EXPORT const char* ovrHmd_GetLastError(ovrHmd hmd);
OVR_EXPORT ovrBool  ovrHmd_StartSensor(ovrHmd hmd, unsigned int supportedCaps,
                                       unsigned int requiredCaps);
OVR_EXPORT void     ovrHmd_StopSensor(ovrHmd hmd);
OVR_EXPORT void     ovrHmd_ResetSensor(ovrHmd hmd);
OVR_EXPORT ovrSensorState ovrHmd_GetSensorState(ovrHmd hmd, double absTime);
OVR_EXPORT ovrBool     ovrHmd_GetSensorDesc(ovrHmd hmd, ovrSensorDesc* descOut);
OVR_EXPORT void     ovrHmd_GetDesc(ovrHmd hmd, ovrHmdDesc* desc);
OVR_EXPORT ovrSizei ovrHmd_GetFovTextureSize(ovrHmd hmd, ovrEyeType eye, ovrFovPort fov,
                                             float pixelsPerDisplayPixel);
OVR_EXPORT ovrBool ovrHmd_ConfigureRendering( ovrHmd hmd,
                                              const ovrRenderAPIConfig* apiConfig,
                                              unsigned int hmdCaps,
                                              unsigned int distortionCaps,
                                              const ovrEyeDesc eyeDescIn[2],
                                              ovrEyeRenderDesc eyeRenderDescOut[2] );
OVR_EXPORT ovrFrameTiming ovrHmd_BeginFrame(ovrHmd hmd, unsigned int frameIndex);
OVR_EXPORT void     ovrHmd_EndFrame(ovrHmd hmd);
OVR_EXPORT ovrPosef ovrHmd_BeginEyeRender(ovrHmd hmd, ovrEyeType eye);
OVR_EXPORT void     ovrHmd_EndEyeRender(ovrHmd hmd, ovrEyeType eye,
                                        ovrPosef renderPose, ovrTexture* eyeTexture);
OVR_EXPORT ovrEyeRenderDesc ovrHmd_GetRenderDesc(ovrHmd hmd, ovrEyeDesc eyeDesc);
typedef struct ovrDistortionMesh_
{
    ovrDistortionVertex* pVertexData;
    unsigned short*      pIndexData;
    unsigned int         VertexCount;
    unsigned int         IndexCount;
} ovrDistortionMesh;
OVR_EXPORT ovrBool  ovrHmd_CreateDistortionMesh( ovrHmd hmd, ovrEyeDesc eyeDesc,
                                                 unsigned int distortionCaps,
                                                 ovrVector2f uvScaleOffsetOut[2], 
                                                 ovrDistortionMesh *meshData );
OVR_EXPORT void     ovrHmd_DestroyDistortionMesh( ovrDistortionMesh* meshData );
OVR_EXPORT void     ovrHmd_GetRenderScaleAndOffset( ovrHmd hmd, ovrEyeDesc eyeDesc,
                                                    unsigned int distortionCaps,
                                                    ovrVector2f uvScaleOffsetOut[2] );
OVR_EXPORT ovrFrameTiming ovrHmd_GetFrameTiming(ovrHmd hmd, unsigned int frameIndex);
OVR_EXPORT ovrFrameTiming ovrHmd_BeginFrameTiming(ovrHmd hmd, unsigned int frameIndex);
OVR_EXPORT void     ovrHmd_EndFrameTiming(ovrHmd hmd);
OVR_EXPORT void     ovrHmd_ResetFrameTiming(ovrHmd hmd, unsigned int frameIndex, bool vsync);
OVR_EXPORT ovrPosef ovrHmd_GetEyePose(ovrHmd hmd, ovrEyeType eye);
OVR_EXPORT void     ovrHmd_GetEyeTimewarpMatrices(ovrHmd hmd, ovrEyeType eye,
                                                  ovrPosef renderPose, ovrMatrix4f twmOut[2]);
OVR_EXPORT ovrMatrix4f ovrMatrix4f_Projection( ovrFovPort fov,
                                               float znear, float zfar, ovrBool rightHanded );
OVR_EXPORT ovrMatrix4f ovrMatrix4f_OrthoSubProjection(ovrMatrix4f projection, ovrVector2f orthoScale,
                                                      float orthoDistance, float eyeViewAdjustX);
OVR_EXPORT double   ovr_GetTimeInSeconds();
OVR_EXPORT double   ovr_WaitTillTime(double absTime);
OVR_EXPORT ovrBool      ovrHmd_ProcessLatencyTest(ovrHmd hmd, unsigned char rgbColorOut[3]);
OVR_EXPORT const char*  ovrHmd_GetLatencyTestResult(ovrHmd hmd);
OVR_EXPORT double       ovrHmd_GetMeasuredLatencyTest2(ovrHmd hmd);
    #define OVR_KEY_USER                        "User"
    #define OVR_KEY_NAME                        "Name"
    #define OVR_KEY_GENDER                      "Gender"
    #define OVR_KEY_PLAYER_HEIGHT               "PlayerHeight"
    #define OVR_KEY_EYE_HEIGHT                  "EyeHeight"
    #define OVR_KEY_IPD                         "IPD"
    #define OVR_KEY_NECK_TO_EYE_HORIZONTAL      "NeckEyeHori"
    #define OVR_KEY_NECK_TO_EYE_VERTICAL        "NeckEyeVert"
    #define OVR_DEFAULT_GENDER                  "Male"
    #define OVR_DEFAULT_PLAYER_HEIGHT           1.778f
    #define OVR_DEFAULT_EYE_HEIGHT              1.675f
    #define OVR_DEFAULT_IPD                     0.064f
    #define OVR_DEFAULT_NECK_TO_EYE_HORIZONTAL  0.12f
    #define OVR_DEFAULT_NECK_TO_EYE_VERTICAL    0.12f
OVR_EXPORT float       ovrHmd_GetFloat(ovrHmd hmd, const char* propertyName, float defaultVal);
OVR_EXPORT ovrBool      ovrHmd_SetFloat(ovrHmd hmd, const char* propertyName, float value);
OVR_EXPORT unsigned int ovrHmd_GetFloatArray(ovrHmd hmd, const char* propertyName,
                                            float values[], unsigned int arraySize);
OVR_EXPORT ovrBool      ovrHmd_SetFloatArray(ovrHmd hmd, const char* propertyName,
                                             float values[], unsigned int arraySize);
OVR_EXPORT const char* ovrHmd_GetString(ovrHmd hmd, const char* propertyName,
                                        const char* defaultVal);
OVR_EXPORT unsigned int ovrHmd_GetArraySize(ovrHmd hmd, const char* propertyName);